--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Online strategy game in pure JavaScript and NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "node_modules/.bin/jasmine-node server",
     "start": "node index.js"
   },
   "repository": {
